# Maududi-s_Legacy

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercel-current  .vercel-output  .vercelignore  AI_Features_Report.md  ENVIRONMENT_SETUP.md  QUICK_START.md  README.md  RELEASE_NOTES.md  Refrence Code.tex  SYSTEM_DOCUMENTATION.md  docker-compose.yml  eslint.config.mjs  index.html  jest.config.js  kill_port_8000.bat  metadata.json  next.config.mjs  package-lock.json  package.json  render.yaml  report.tex  run_servers.bat  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite-env.d.ts  vite.config.ts
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_v2.py  config.py  database.py  exceptions.py  logger.py  main.py  middleware.py  pyproject.toml  requirements.txt  run_build.bat  validators.py  vercel.json  wsgi.py
backend/.vercel/: project.json
backend/alembic/: env.py
backend/alembic/versions/: 20260521_1256_82e9f09cc302_initial_migration.py  20260621_0001_1b4c2c1f3a2d_add_password_reset_tokens.py  20260621_0002_5e7a9c8d1f0b_add_user_chat_tables.py
backend/data/: books.py
backend/models/: book.py  db_models.py
backend/repositories/: __init__.py  book_repository.py  conversation_repository.py  user_repository.py
backend/routers/: auth.py  books.py  chat.py
backend/scripts/: batch_ingest.py  build_vectordb.py  check_books.py  ingest_book.py  migrate_books.py  query_test.py  seed_mongo.py
backend/services/: agent_pipeline.py  cache_service.py  conversation_service.py  gemini_service.py  groq_service.py  llm_service.py  topic_service.py
backend/services/agents/: __init__.py  orchestrator.py  researcher.py  synthesizer.py
backend/services/vector_db/: __init__.py  chroma_http.py  chunker.py  config.py  embedder.py  pdf_processor.py  retriever.py  vector_store.py
backend/tests/: conftest.py  test_books.py  test_chat.py
public/: sw.js  (+3 more)
(+162 files in other folders)
